--- a/save-points/00-Starting-point/BlazingPizza.Client/_Imports.razor
+++ b/save-points/00-Starting-point/BlazingPizza.Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using BlazingPizza.Client
 @using BlazingPizza.Client.Shared
 @using BlazingPizza.ComponentsLibrary
+@using Radzen
+@using Radzen.Blazor
