--- a/save-points/00-Starting-point/BlazingPizza.Client/Pages/Index.razor
+++ b/save-points/00-Starting-point/BlazingPizza.Client/Pages/Index.razor
@@ -19,7 +19,7 @@
             }
         }
     </ul>
-    <RadzenButton Click="@((args) => ButtonClick(args, "Button with text and icon"))" Text="Login" Icon="account_circle" Style="margin-bottom: 20px; width: 150px"/>
+    @*<RadzenButton Click="@((args) => ButtonClick(args, "Button with text and icon"))" Text="Login" Icon="account_circle" Style="margin-bottom: 20px; width: 150px"/>*@
 </div>
 
 <div class="sidebar">
