--- a/save-points/00-Starting-point/BlazingPizza.Client/Shared/MainLayout.razor
+++ b/save-points/00-Starting-point/BlazingPizza.Client/Shared/MainLayout.razor
@@ -1,5 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
+
 <div class="top-bar">
     <img class="logo" src="img/ANDEN_LOGO.svg"/>
 
@@ -12,6 +13,8 @@
         <img src="img/bike.svg"/>
         <div>My Orders</div>
     </NavLink>
+
+    <LoginDisplay />
 </div>
 
 <div class="content">
