--- a/save-points/00-Starting-point/BlazingPizza.Client/_Imports.razor
+++ b/save-points/00-Starting-point/BlazingPizza.Client/_Imports.razor
@@ -8,5 +8,6 @@
 @using BlazingPizza.Client
 @using BlazingPizza.Client.Shared
 @using BlazingPizza.ComponentsLibrary
+@using BlazingPizza.ComponentsLibrary.Map
 @using Radzen
 @using Radzen.Blazor
