--- a/save-points/00-Starting-point/BlazingPizza.Client/_Imports.razor
+++ b/save-points/00-Starting-point/BlazingPizza.Client/_Imports.razor
@@ -9,5 +9,6 @@
 @using BlazingPizza.Client.Shared
 @using BlazingPizza.ComponentsLibrary
 @using BlazingPizza.ComponentsLibrary.Map
+@using BlazingComponents
 @using Radzen
 @using Radzen.Blazor
