--- a/save-points/00-Starting-point/BlazingPizza.Client/Pages/Checkout.razor
+++ b/save-points/00-Starting-point/BlazingPizza.Client/Pages/Checkout.razor
@@ -61,6 +61,17 @@
                 NavigationManager.NavigateTo("");
             }
         }
+        // In the background, ask if they want to be notified about order updates
+        _ = RequestNotificationSubscriptionAsync();
+    }
+
+    async Task RequestNotificationSubscriptionAsync()
+    {
+        var subscription = await JSRuntime.InvokeAsync<NotificationSubscription>("blazorPushNotifications.requestSubscription");
+        if (subscription != null)
+        {
+            await HttpClient.PutJsonAsync<object>("notifications/subscribe", subscription);
+        }
     }
 
     async Task PlaceOrder()
@@ -70,4 +81,5 @@
         OrderState.ResetOrder();
         NavigationManager.NavigateTo($"myorders/{newOrderId}");
     }
+
 }
