mysql-migration inprogress

--- a/src/BlazingPizza.Client/_Imports.razor
+++ b/src/BlazingPizza.Client/_Imports.razor
@@ -7,6 +7,10 @@
 @using Microsoft.JSInterop
 @using BlazingPizza.Client
 @using BlazingPizza.Client.Shared
+@using BlazingPizza.Client.Auth
+@using BlazingPizza.Client.Helpers
 @using BlazingPizza.ComponentsLibrary
 @using BlazingPizza.ComponentsLibrary.Map
 @using BlazingComponents
+@using BlazingPizza.Shared
+@using BlazingPizza.Shared.Models
