--- a/src/BlazingPizza.Client/Shared/MainLayout.razor
+++ b/src/BlazingPizza.Client/Shared/MainLayout.razor
@@ -13,6 +13,11 @@
         <div>My Orders</div>
     </NavLink>
 
+    <NavLink href="people" class="nav-tab">
+        <img src="img/bike.svg" />
+        <div>People Masta</div>
+    </NavLink>
+
     <LoginDisplay />
 </div>
 
