--- a/src/BlazingPizza.Client/wwwroot/css/site.css
+++ b/src/BlazingPizza.Client/wwwroot/css/site.css
@@ -734,3 +734,24 @@ input[type=range] {
         transform: translateX(500px);
     }
 }
+
+
+
+
+
+/*hands on blazor crud*/
+.form-markdown-container {
+    display: flex;
+}
+
+.form-markdown-container textarea {
+    width: 500px;
+    height: 500px;
+    margin-right: 15px;
+}
+
+.form-markdown-container .markdown-container {
+    border: 1px dashed black;
+    width: 500px;
+    height: 500px;
+}
