--- a/src/BlazingPizza.Client/Pages/People/Create.razor
+++ b/src/BlazingPizza.Client/Pages/People/Create.razor
@@ -1,6 +1,7 @@
-﻿@page "/people/create"
+@page "/people/create"
 @inject HttpClient http
 @inject NavigationManager NavigationManager
+@attribute [Authorize]
 
 <h3>People/Create</h3>
 
