--- a/src/BlazingPizza.Client/Pages/People/Edit.razor
+++ b/src/BlazingPizza.Client/Pages/People/Edit.razor
@@ -1,6 +1,7 @@
-﻿@page "/people/edit/{personId:int}"
+@page "/people/edit/{personId:int}"
 @inject HttpClient http
 @inject NavigationManager NavigationManager
+@attribute [Authorize]
 
 <h3>People/Create</h3>
 
