--- a/src/BlazingPizza.Client/Shared/MainLayout.razor
+++ b/src/BlazingPizza.Client/Shared/MainLayout.razor
@@ -1,7 +1,7 @@
-﻿@inherits LayoutComponentBase
+@inherits LayoutComponentBase
 
 <div class="top-bar">
-    <img class="logo" src="img/logo.svg" />
+    <img class="logo" src="img/ANDEN_LOGO.svg" />
 
     <NavLink href="" class="nav-tab" Match="NavLinkMatch.All">
         <img src="img/pizza-slice.svg" />
