--- a/src/BlazingPizza.Client/Pages/People/Index.razor
+++ b/src/BlazingPizza.Client/Pages/People/Index.razor
@@ -28,7 +28,7 @@
     </button>
 </div>
 
-<Pagination TotaPagesQuantity="totalPageQuantity" CurrentPage="currentPage" Radius="2" SelectedPage="SelectedPage"></Pagination>
+<PaginationTest TotaPagesQuantity="totalPageQuantity" CurrentPage="currentPage" Radius="2" SelectedPage="SelectedPage"></PaginationTest>
 
 <div>
     <GenericList Elements="people">
