--- a/src/BlazingPizza.Client/Shared/PaginationTest.razor
+++ b/src/BlazingPizza.Client/Shared/PaginationTest.razor
@@ -8,6 +8,9 @@
                 <span class="page-link" href="#">@link.Text</span>
             </li>
         }
+        <li>
+            <label>(@CurrentPage/)</label>
+        </li>
     </ul>
 </nav>
 
