--- a/src/BlazingPizza.Client/App.razor
+++ b/src/BlazingPizza.Client/App.razor
@@ -1,13 +1,14 @@
-﻿<CascadingAuthenticationState>
+<CascadingAuthenticationState>
     <Router AppAssembly="typeof(Program).Assembly" Context="routeData">
         <Found>
             <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)">
                 <NotAuthorized>
-                    <div class="main">
+                    @*<div class="main">
                         <h2>You're signed out</h2>
                         <p>To continue, please sign in.</p>
                         <a class="btn btn-danger" href="user/signin">Sign in</a>
-                    </div>
+                    </div>*@
+                    <RedirectToLogin />
                 </NotAuthorized>
                 <Authorizing>
                     <div class="main">Please wait...</div>
