--- a/src/BlazingPizza.Client/Pages/Index.razor
+++ b/src/BlazingPizza.Client/Pages/Index.razor
@@ -1,8 +1,10 @@
-﻿@page "/"
+@page "/"
+@attribute [Authorize]
 @inject HttpClient HttpClient
 @inject OrderState OrderState
 @inject NavigationManager NavigationManager
 @inject IJSRuntime JS
+
 
 <div class="main">
     <ul class="pizza-cards">
