--- a/src/BlazingPizza.Client/Shared/InputPassword.razor
+++ b/src/BlazingPizza.Client/Shared/InputPassword.razor
@@ -1,9 +1,10 @@
-﻿@inherits InputBase<string>
+@inherits InputBase<string>
 
-<input type="password" @bind="CurrentValue" id="@Id" class="@CssClass" />
+<input type="password" @bind="CurrentValue" id="@Id" class="@CssClass" placeholder="@Placeholder" />
 
 @code {
     [Parameter] public string Id { get; set; }
+    [Parameter] public string Placeholder { get; set; }
 
     protected override bool TryParseValueFromString(string value, 
         out string result, out string validationErrorMessage)
