--- a/src/BlazingPizza.Client/wwwroot/css/site.css
+++ b/src/BlazingPizza.Client/wwwroot/css/site.css
@@ -755,3 +755,167 @@ input[type=range] {
     width: 500px;
     height: 500px;
 }
+
+/*login form*/
+/*input[type="password"] {
+    width: 76%;
+    height: 20px;
+    margin-bottom: 4%;
+    border: 1px solid #ccc;
+    padding: 4% 4% 4% 4%;
+    font-family: 'Open Sans',sans-serif;
+    font-size: 95%;
+    color: #555;
+}
+.iconPassword {
+    width: 20px;
+    height: 20px;
+    background-color: #004A3E;
+    float: left;
+    padding: 4% 4% 4% 4%;
+    margin-bottom: 4%;
+    background-repeat: no-repeat;
+    background-image: url(https://cdn4.iconfinder.com/data/icons/font-awesome-2/2048/f09c-32.png);
+    background-position: center;
+    border: 1px solid #ccc;
+}
+
+.iconUser {
+    width: 20px;
+    height: 20px;
+    background-color: #004A3E;
+    float: left;
+    padding: 4% 4% 4% 4%;
+    margin-bottom: 4%;
+    background-repeat: no-repeat;
+    background-image: url(https://cdn4.iconfinder.com/data/icons/font-awesome-2/2048/f007-32.png);
+    background-position: center;
+    border: 1px solid #ccc;
+}
+input[type="submit"] {
+    width: 100%;
+    background: #004A3E;
+    border: 0;
+    padding: 4%;
+    font-family: 'Open Sans',sans-serif;
+    font-size: 100%;
+    color: #fff;
+    cursor: pointer;
+    transition: background .3s;
+    -webkit-transition: background .3s;
+}
+input[type="submit"]:hover {
+    background: #53B9A8;
+}
+
+::-webkit-input-placeholder {
+}*/
+:root {
+    --input-padding-x: 1.5rem;
+    --input-padding-y: .75rem;
+}
+/*body {
+    background: #007bff;
+    background: linear-gradient(to right, #0062E6, #33AEFF);
+}*/
+
+.card-signin {
+    border: 0;
+    /*border-radius: 1rem;*/
+    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+}
+
+    .card-signin .card-title {
+        margin-bottom: 2rem;
+        font-weight: 300;
+        font-size: 1.5rem;
+    }
+
+    .card-signin .card-body {
+        padding: 2rem;
+    }
+
+.form-signin {
+    width: 100%;
+}
+
+    .form-signin .btn {
+        font-size: 80%;
+        /*border-radius: 5rem;*/
+        letter-spacing: .1rem;
+        font-weight: bold;
+        padding: 1rem;
+        transition: all 0.2s;
+    }
+
+.form-label-group {
+    position: relative;
+    margin-bottom: 1rem;
+}
+
+    .form-label-group input {
+        height: auto;
+        /*border-radius: 2rem;*/
+    }
+
+    .form-label-group > input,
+    .form-label-group > label {
+        padding: var(--input-padding-y) var(--input-padding-x);
+    }
+
+    .form-label-group > label {
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        margin-bottom: 0;
+        /* Override default `<label>` margin */
+        line-height: 1.5;
+        color: #495057;
+        border: 1px solid transparent;
+        /*border-radius: .25rem;*/
+        transition: all .1s ease-in-out;
+    }
+
+    .form-label-group input::-webkit-input-placeholder {
+        color: transparent;
+    }
+
+    .form-label-group input:-ms-input-placeholder {
+        color: transparent;
+    }
+
+    .form-label-group input::-ms-input-placeholder {
+        color: transparent;
+    }
+
+    .form-label-group input::-moz-placeholder {
+        color: transparent;
+    }
+
+    .form-label-group input::placeholder {
+        color: transparent;
+    }
+
+    .form-label-group input:not(:placeholder-shown) {
+        padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
+        padding-bottom: calc(var(--input-padding-y) / 3);
+    }
+
+        .form-label-group input:not(:placeholder-shown) ~ label {
+            padding-top: calc(var(--input-padding-y) / 3);
+            padding-bottom: calc(var(--input-padding-y) / 3);
+            font-size: 12px;
+            color: #777;
+        }
+
+.btn-google {
+    color: white;
+    background-color: #ea4335;
+}
+
+.btn-facebook {
+    color: white;
+    background-color: #3b5998;
+}
