utf8 encode, design fix

--- a/src/BlazingPizza.Client/Pages/Checkout.razor
+++ b/src/BlazingPizza.Client/Pages/Checkout.razor
@@ -1,4 +1,4 @@
-@page "/checkout"
+﻿@page "/checkout"
 @inject OrderState OrderState
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
