--- a/src/BlazingPizza.Client/Pages/Counter.razor
+++ b/src/BlazingPizza.Client/Pages/Counter.razor
@@ -1,4 +1,4 @@
-@page "/counter"
+﻿@page "/counter"
 @attribute [Authorize]
 
 <h1 style="color:@AppState.Color; font-size: @AppState.Size">Counter</h1>
