--- a/src/BlazingPizza.Client/Shared/InputPassword.razor
+++ b/src/BlazingPizza.Client/Shared/InputPassword.razor
@@ -1,4 +1,4 @@
-@inherits InputBase<string>
+﻿@inherits InputBase<string>
 
 <input type="password" @bind="CurrentValue" id="@Id" class="@CssClass" placeholder="@Placeholder" />
 
