--- a/src/BlazingPizza.Client/Shared/PaginationTest.razor
+++ b/src/BlazingPizza.Client/Shared/PaginationTest.razor
@@ -1,4 +1,4 @@
-<nav aria-label="Page navigation example">
+﻿<nav aria-label="Page navigation example">
     <ul class="pagination justify-content-center">
         @foreach (var link in links)
         {
