--- a/src/BlazingPizza.Client/_Imports.razor
+++ b/src/BlazingPizza.Client/_Imports.razor
@@ -16,5 +16,6 @@
 @using BlazingPizza.Shared.Models
 @using Radzen
 @using Radzen.Blazor
+@using MatBlazor
 @using Blazorise
 @using Blazorise.Charts
