--- a/src/BlazingPizza.Client/App.razor
+++ b/src/BlazingPizza.Client/App.razor
@@ -1,4 +1,4 @@
-<CascadingAuthenticationState>
+﻿<CascadingAuthenticationState>
     <Router AppAssembly="typeof(Program).Assembly" Context="routeData">
         <Found>
             <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)">
