--- a/src/BlazingPizza.Client/Pages/Auth/Logout.razor
+++ b/src/BlazingPizza.Client/Pages/Auth/Logout.razor
@@ -1,4 +1,4 @@
-﻿@page "/logout"
+@page "/logout"
 @inject ILoginService loginService
 @inject NavigationManager navigationManager
 @using BlazingPizza.Client.Auth
