--- a/src/BlazingPizza.Client/wwwroot/css/site.css
+++ b/src/BlazingPizza.Client/wwwroot/css/site.css
@@ -1,7 +1,9 @@
 ﻿@import url('font/quicksand.css');
 
 body, html {
-    height: 100%;
+    height: 90%;
+    min-width:1280px;
+    min-height:1030px;
 }
 
 body {
@@ -21,7 +23,7 @@ form {
 
 .top-bar {
     height: 5rem;
-    background-color: rgb(192,0,0);
+    background-color: rgb(45, 91, 241);
     background-image: linear-gradient(rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.25) 25%, rgba(0,0,0,0) 70%);
     display: flex;
     align-items: stretch;
