--- a/src/BlazingPizza.Client/Pages/Auth/Login.razor
+++ b/src/BlazingPizza.Client/Pages/Auth/Login.razor
@@ -1,4 +1,4 @@
-@page "/login"
+﻿@page "/login"
 @inject HttpClient http
 @inject ILoginService  loginService
 @inject NavigationManager navigationManager
