--- a/src/BlazingPizza.Client/Pages/Repos/People/Create.razor
+++ b/src/BlazingPizza.Client/Pages/Repos/People/Create.razor
@@ -1,4 +1,4 @@
-@page "/people/create"
+﻿@page "/people/create"
 @inject HttpClient http
 @inject NavigationManager NavigationManager
 @attribute [Authorize]
