--- a/src/BlazingPizza.Client/Pages/Repos/People/Edit.razor
+++ b/src/BlazingPizza.Client/Pages/Repos/People/Edit.razor
@@ -1,4 +1,4 @@
-@page "/people/edit/{personId:int}"
+﻿@page "/people/edit/{personId:int}"
 @inject HttpClient http
 @inject NavigationManager NavigationManager
 @attribute [Authorize]
