--- a/src/BlazingPizza.Client/Pages/Repos/People/PersonForm.razor
+++ b/src/BlazingPizza.Client/Pages/Repos/People/PersonForm.razor
@@ -1,4 +1,4 @@
-@inject HttpClient http
+﻿@inject HttpClient http
 
 <EditForm Model="@Person" OnValidSubmit="@OnValidSubmit">
     <DataAnnotationsValidator/>
