--- a/src/BlazingPizza.Client/Shared/MainLayout.razor
+++ b/src/BlazingPizza.Client/Shared/MainLayout.razor
@@ -1,4 +1,4 @@
-﻿@inherits LayoutComponentBase
+@inherits LayoutComponentBase
 
 <div class="top-bar">
     <div style="display:inline-flex" class="d-flex align-items-center justify-content-center">
@@ -9,7 +9,7 @@
 
     <NavLink href="" class="nav-tab" Match="NavLinkMatch.All">
         <img src="img/pizza-slice.svg"/>
-        <div>Get Pizza</div>
+        <div>TOP</div>
     </NavLink>
 
     <NavLink href="myorders" class="nav-tab">
@@ -23,13 +23,13 @@
     </NavLink>
 
     <NavLink href="counter" class="nav-tab">
-        <a href=""><RadzenIcon Icon="add_circle_outline" Style="color:white;font-size:48px" /></a>
+        <RadzenIcon Icon="add_circle_outline" Style="color:white;font-size:48px" />
         <div>Counter</div>
     </NavLink>
 
     <NavLink href="charttest" class="nav-tab">
         <img src="img/chart_light.svg"/>
-        <div>Counter</div>
+        <div>Chart</div>
     </NavLink>
 
     <LoginDisplay/>
